--- a/src/components/navlinks/navlinks.module.scss
+++ b/src/components/navlinks/navlinks.module.scss
@@ -6,9 +6,16 @@
   padding-bottom: 1rem;
   font-size: 1.1rem;
   font-weight: 400;
+  @media only screen and (max-width: 640px) {
+    font-size: 1.5rem;
+    margin-bottom: 3rem;
+  }
 }
 
 .active {
   color: $text_primary !important;
   border-bottom: 2px solid $text_primary;
+  @media only screen and (max-width: 640px) {
+    border-bottom: unset;
+  }
 }
