--- a/src/layout/footer/footer.module.scss
+++ b/src/layout/footer/footer.module.scss
@@ -3,6 +3,9 @@
 .footerWrapper {
   color: $text_gray;
   padding: 5rem 7rem;
+  @media only screen and (max-width: 1024px) {
+    padding: 5rem 2rem;
+  }
   .footerLinksContainer {
     display: flex;
     justify-content: space-between;
@@ -15,6 +18,7 @@
       width: 30%;
 
       @media only screen and (max-width: 1024px) {
+        width: 100%;
         margin-bottom: 5rem;
       }
     }
@@ -22,12 +26,14 @@
       width: 20%;
 
       @media only screen and (max-width: 1024px) {
+        width: 100%;
         margin-bottom: 5rem;
       }
     }
     .box3 {
       width: 20%;
       @media only screen and (max-width: 1024px) {
+        width: 100%;
         margin-bottom: 5rem;
       }
     }
