--- a/src/layout/header/header.module.scss
+++ b/src/layout/header/header.module.scss
@@ -12,6 +12,9 @@
   transition: background-color 0.5s ease;
   display: flex;
   align-items: center;
+  @media only screen and (max-width: 640px) {
+    padding: 1rem 2rem;
+  }
   &Solid {
     background-color: $bg_primary;
   }
@@ -21,6 +24,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    @media only screen and (max-width: 640px) {
+      height: 8rem;
+    }
     .logo {
       height: 3rem;
       width: 6rem;
@@ -39,5 +45,32 @@
         display: block;
       }
     }
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    background: #ffffff;
+    z-index: 999;
+    transition: all 0.3s ease-in-out;
+    padding: 0 2rem;
+    .mobileMenu {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
+  .show {
+    visibility: visible;
+    opacity: 1;
   }
 }
